# OpenSearchVectorPodcastWorkshop

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
notebooks/: 01_index_podcasts.ipynb  02_rag_pipeline.ipynb  03_reranking.ipynb  04_metadata_filtering.ipynb  05_larger_embeddings.ipynb  06_aiven_opensearch.ipynb
src/: opensearch_client.py  parser.py  rag.py  reranker.py
